<resources>
    <string name="app_name">All For One</string>
    <string name="title_activity_maps">Map</string>
    <string name="btnLogin">Login</string>
    <string name="btnContinue">Try it!</string>
    <string name="btnSign">Sign In</string>
    <string name="logo">logo image</string>
    <string name="textNavi">Try Demo</string>
    <string name="title_shelter">This is Shelter Page</string>
    <string name="title_bchousing">This is bcHousing page</string>
    <string name="title_hosipital">This is Hospital Page</string>
    <string name="title_panic">This is panic button page</string>
    <string name="title_food">This is Food Page</string>
    <string name="title_LifeGuard">This is life guard page</string>
    <string name="txtSign">New to All For One? Join us with your information!</string>
    <string name="btnJoin">Sign up Now</string>
    <string name="btnRegister">Register</string>
    <string name="img_description_take_our_hand">Take our hand</string>
    <string name="sign_in_title">Id and Password should more than 6 characters</string>
    <string name="txt_Name">User Name</string>
    <string name="txt_User_Id">User Id</string>
    <string name="txt_password">Password</string>
    <string name="txt_re_password">Re-Password</string>
    <string name="hint_Name">Enter your Name</string>
    <string name="hint_User_Id">Enter your ID</string>
    <string name="hint_Password">Enter your Password</string>
    <string name="hint_Re_Password">Re-enter your Password</string>
    <string name="msgLifeGuard">Dear user, this functionality will allow you to set a timer when you are going to use drugs. The alarm will sounds at a certain time and manages to wake you up.</string>
    <string name="hint_minutes">Minutes</string>
    <string name="btnSetAlamar">Set Alarm</string>
    <string name="timer">00:00</string>
    <string name="btnStartAlarm">Start Alarm</string>
    <string name="btnResetAlarm">Reset Alarm</string>
    <string name="txtLifeGuardTitle">Life Guard App</string>
    <string name="imgButton">Button Image</string>
    <string name="btn_setting">Set the Emergency Number</string>
    <string name="txt_Number">Enter your Emergency Number</string>
    <string name="txt_num_hint">Only Enter Number ex)7777777777</string>
    <string name="txt_confirm">The Emergency Message send to 911</string>
    <string name="txt_consideration">Click the button When You Emergency</string>
    <string name="btn_emergencyBtn">send emergency message</string>
    <string name="title_activity_location_app">Map</string>
    <string name="bchousing_url">https://www.bchousing.org/housing-assistance/homelessness-services</string>
</resources>